--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 node_modules/
+.pnp
+.pnp.js
 
 # Expo
 .expo/
@@ -17,6 +19,9 @@ expo-env.d.ts
 *.p12
 *.key
 *.mobileprovision
+.idea/
+.vscode/
+*.swp
 
 # Metro
 .metro-health-check*
@@ -25,6 +30,11 @@ expo-env.d.ts
 npm-debug.*
 yarn-debug.*
 yarn-error.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.DS_Store
+Thumbs.db
 
 # macOS
 .DS_Store
@@ -32,6 +42,9 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
+.env.local
+*.pem
 
 # typescript
 *.tsbuildinfo
@@ -41,3 +54,5 @@ app-example
 # generated native folders
 /ios
 /android
+*.apk
+*.aab
