refactor: simplify Vercel rewrites for index.html routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "rewrites": [
     {
-      "source": "/finances",
-      "destination": "/index.html"
-    },
-    {
-      "source": "/finances/(.*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
