feat: add app title for iOS PWA support and remove redundant meta tags in layout

--- a/app.json
+++ b/app.json
@@ -26,7 +26,8 @@
       "display": "standalone",
       "meta": {
         "apple-mobile-web-app-capable": "yes",
-        "apple-mobile-web-app-status-bar-style": "black-translucent"
+        "apple-mobile-web-app-status-bar-style": "black-translucent",
+        "apple-mobile-web-app-title": "Mis Finanzas" 
       }
     },
     "plugins": [
