feat: enhance PWA configuration with dynamic theme colors and background; add root HTML structure for web pages

--- a/app.json
+++ b/app.json
@@ -26,10 +26,12 @@
       "scope": "/",
       "startUrl": "/finances",
       "favicon": "./public/apple-touch-icon.png",
+      "backgroundColor": "#121212",
       "meta": {
         "apple-mobile-web-app-capable": "yes",
         "apple-mobile-web-app-status-bar-style": "black-translucent",
-        "apple-mobile-web-app-title": "Mis Finanzas"
+        "apple-mobile-web-app-title": "Mis Finanzas",
+        "theme-color": "#121212"
       }
     },
     "plugins": [
