--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
     "expo-linking": "~8.0.11",
+    "expo-print": "^15.0.8",
     "expo-router": "~6.0.21",
     "expo-splash-screen": "~31.0.13",
     "expo-status-bar": "~3.0.9",
@@ -33,6 +34,7 @@
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
     "firebase": "^12.8.0",
+    "jspdf": "^4.0.0",
     "lodash": "^4.17.21",
     "react": "19.1.0",
     "react-dom": "19.1.0",
