--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "finances-app",
+  "name": "FINANZAS",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@expo/metro-config": "~54.0.14",
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
